# yolov5-cpp

./: .gitignore
opencv/: CMakeLists.txt  main.cpp
